# Python_memo

./: README.md  pyproject.toml
.github/workflows/: coverage.yml
Sphinx/: README.md
async/: README.md
black/: README.md
fastapi/: main.py
mypy/: README.md
practice/: README.md
pyproject/: REAEMD.md
ruff/: README.md
tests/: test_program.py
tutorial/: README.md
tutorial/appendix-A/: README.md
tutorial/chap1/: README.md
tutorial/chap2/: README.md
tutorial/chap3/: README.md
tutorial/chap4/: README.md
tutorial/chap5/: README.md
tutorial/chap6/: README.md
