[tool.poetry]
name = "python-memo"
version = "0.1.0"
description = ""
authors = ["okmtdev <yuki.nakajima@revcomm.co.jp>"]
readme = "README.md"
packages = [{include = "python_memo"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
