[tool.poetry]
name = "python-memo"
version = "0.1.0"
description = ""
authors = ["okmtdev <yuki.nakajima@revcomm.co.jp>"]
dependencies = [
    "pytest-cov~=4.1.0",
]
readme = "README.md"
packages = [{include = "python_memo"}]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
